Added div content and borders, adjusted colors

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, accusamus eius in culpa porro odit, veniam perferendis quo excepturi nulla sunt, ut iusto? Tempore odio quam doloribus sunt pariatur quaerat?
             </div>
             <div class="div-2">
-                Div 2
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos adipisci reprehenderit soluta eligendi dolor beatae velit rerum dolore eum. Culpa placeat nostrum voluptatem quasi vitae vero porro doloribus iure quaerat.
             </div>
             <div class="div-3">
-                Div 3
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit quam molestias deleniti, ea perspiciatis aliquid architecto et obcaecati ullam, tempora asperiores iste minus corporis dicta.
             </div>
         </section>    
 
